--- a/blocks/edit-form-container/edit-form-container.css
+++ b/blocks/edit-form-container/edit-form-container.css
@@ -5,3 +5,9 @@
   background-color: #fff;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
 }
+
+@media (max-width: 550px) {
+  .edit-form-container {
+    padding: 25px 22px;
+  }
+}
