--- a/blocks/edit-form/__input-text/edit-form__input-text.css
+++ b/blocks/edit-form/__input-text/edit-form__input-text.css
@@ -1,6 +1,6 @@
 .edit-form__input-text {
   font-size: 14px;
-  font-family: 'Inter';
+  font-family: 'Inter', ‘Arial’, sans-serif;
   margin: 0;
   font-weight: 400;
   display: block;
