--- a/pages/index.css
+++ b/pages/index.css
@@ -1,3 +1,4 @@
+@import url(../vendor/normalize.css);
 @import url(../vendor/fonts.css);
 @import url(../blocks/root/root.css);
 @import url(../blocks/page/page.css);
@@ -17,7 +18,6 @@
 @import url(../blocks/element/element.css );
 @import url(../blocks/element/__description/element__description.css);
 @import url(../blocks/element/__image/element__image.css);
-@import url(../blocks/element/__invisible-checkbox/element__invisible-checkbox.css);
 @import url(../blocks/element/__like/element__like.css);
 @import url(../blocks/element/__title/element__title.css);
 @import url(../blocks/footer/footer.css);
@@ -28,10 +28,7 @@
 @import url(../blocks/edit-form/edit-form.css);
 @import url(../blocks/edit-form/__title/edit-form__title.css);
 @import url(../blocks/edit-form/__profile-info/edit-form__profile-info.css);
-@import url(../blocks/edit-form/__handlers/edit-form__handlers.css);
 @import url(../blocks/edit-form/__input-text/edit-form__input-text.css);
 @import url(../blocks/edit-form/__button/edit-form__button.css);
 @import url(../blocks/edit-form/__label/edit-form__label.css);
-@import url(../blocks/edit-form/__input-text/_name/edit-form__input-text_name.css);
-@import url(../blocks/edit-form/__input-text/_profession/edit-form__input-text_profession.css);
 @import url(../blocks/edit-form/__close-button/edit-form__close-button.css);
