--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -33,9 +33,12 @@
 @import url(../blocks/edit-form-container/edit-form-container.css);
 @import url(../blocks/popup/__close-button/popup__close-button.css);
 @import url(../blocks/edit-form/edit-form.css);
+@import url(../blocks/edit-form/__input-error/edit-form__input-error.css);
 @import url(../blocks/edit-form/__title/edit-form__title.css);
 @import url(../blocks/edit-form/__profile-info/edit-form__profile-info.css);
 @import url(../blocks/edit-form/__input-text/edit-form__input-text.css);
+@import url(../blocks/edit-form/__input-text/_type_error/edit-form__input-text_type_error.css);
 @import url(../blocks/edit-form/__button/edit-form__button.css);
+@import url(../blocks/edit-form/__button/__button_disabled/edit-form__button_disabled.css);
 @import url(../blocks/edit-form/__label/edit-form__label.css);
 @import url(../blocks/edit-form/__close-button/edit-form__close-button.css);
