--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -7,6 +7,8 @@
 @import url(../blocks/content/content.css);
 @import url(../blocks/profile/profile.css);
 @import url(../blocks/profile/__avatar/profile__avatar.css);
+@import url(../blocks/profile/__edit-avatar-image/profile__edit-avatar-image.css);
+@import url(../blocks/profile/__avatar-wrapper/profile__avatar-wrapper.css);
 @import url(../blocks/profile/__info/profile__info.css);
 @import url(../blocks/profile/__info-container/profile__info-container.css);
 @import url(../blocks/profile/__title/profile__title.css);
@@ -19,6 +21,7 @@
 @import url(../blocks/element/__description/element__description.css);
 @import url(../blocks/element/__image/element__image.css);
 @import url(../blocks/element/__like/element__like.css);
+@import url(../blocks/element/__like-number/element__like-number.css);
 @import url(../blocks/element/__like/_active/element__like_active.css);
 @import url(../blocks/element/__trash/element__trash.css);
 @import url(../blocks/element/__title/element__title.css);
@@ -35,6 +38,7 @@
 @import url(../blocks/edit-form/edit-form.css);
 @import url(../blocks/edit-form/__input-error/edit-form__input-error.css);
 @import url(../blocks/edit-form/__title/edit-form__title.css);
+@import url(../blocks/edit-form/__title/_space_bottom/edit-form__title_space_bottom.css);
 @import url(../blocks/edit-form/__profile-info/edit-form__profile-info.css);
 @import url(../blocks/edit-form/__input-text/edit-form__input-text.css);
 @import url(../blocks/edit-form/__input-text/_type_error/edit-form__input-text_type_error.css);
