--- a/src/blocks/profile/__avatar-wrapper/profile__avatar-wrapper.css
+++ b/src/blocks/profile/__avatar-wrapper/profile__avatar-wrapper.css
@@ -7,11 +7,9 @@
 
 .profile__avatar-wrapper:hover .profile__avatar {
   cursor: pointer;
-  opacity: .2;
+  opacity: 0.2;
 }
 
 .profile__avatar-wrapper:hover .profile__edit-avatar-image {
   display: block;
 }
-
-
