--- a/src/blocks/edit-form/__button/edit-form__button.css
+++ b/src/blocks/edit-form/__button/edit-form__button.css
@@ -10,11 +10,11 @@
   height: 50px;
   background-color: black;
   color: white;
-  transition: .5s;
+  transition: 0.5s;
 }
 
 .edit-form__button:hover {
-  opacity: .8;
+  opacity: 0.8;
 }
 
 @media (max-width: 550px) {
