--- a/src/blocks/edit-form/__close-button/edit-form__close-button.css
+++ b/src/blocks/edit-form/__close-button/edit-form__close-button.css
@@ -11,11 +11,11 @@
   padding: 0;
   border: none;
   cursor: pointer;
-  transition: .5s;
+  transition: 0.5s;
 }
 
 .edit-form__close-button:hover {
-  opacity: .6;
+  opacity: 0.6;
 }
 
 @media (max-width: 550px) {
