--- a/src/blocks/edit-form/__input-text/edit-form__input-text.css
+++ b/src/blocks/edit-form/__input-text/edit-form__input-text.css
@@ -1,14 +1,13 @@
 .edit-form__input-text {
   font-size: 14px;
-  font-family: 'Inter', ‘Arial’, sans-serif;
+  font-family: "Inter", ‘Arial’, sans-serif;
   margin: 0;
   font-weight: 400;
   display: block;
   padding: 0 0 10px;
   width: 358px;
   border: none;
-  border-bottom: 1px solid rgba(0, 0, 0, .2);
-  
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
 
 .edit-form__input-text:focus {
