--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -3,7 +3,7 @@
   box-sizing: border-box;
   width: 100%;
   max-width: 880px;
-  border-bottom: 1px solid rgba(84, 84, 84, .7);
+  border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 }
 
 @media (max-width: 917px) {
