--- a/src/blocks/page/page.css
+++ b/src/blocks/page/page.css
@@ -6,7 +6,7 @@
   align-items: center;
   color: #fff;
   background-color: #000;
-  font-family: 'Inter', 'Arial', 'Helvetica', sans-serif;
+  font-family: "Inter", "Arial", "Helvetica", sans-serif;
   font-weight: 400;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
