--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -5,7 +5,7 @@
   position: fixed;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, .5);
+  background-color: rgba(0, 0, 0, 0.5);
   visibility: hidden;
   opacity: 0;
   transition: 0.5s;
