--- a/src/blocks/profile/__add-button/profile__add-button.css
+++ b/src/blocks/profile/__add-button/profile__add-button.css
@@ -7,17 +7,17 @@
   transition: 1s;
   background-color: rgba(0, 0, 0, 0);
   border: 2px solid white;
-  background-image: url('../../../images/add-button.svg');
+  background-image: url("../../../images/add-button.svg");
   background-size: 22px;
   background-position: 50%;
   background-repeat: no-repeat;
   border-radius: 2px;
-  transition: .5s;
+  transition: 0.5s;
   cursor: pointer;
 }
 
 .profile__add-button:hover {
-  opacity: .6;
+  opacity: 0.6;
 }
 
 @media (max-width: 711px) {
