--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -33,6 +33,7 @@
 @import url(../blocks/popup/__image/popup__image.css);
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/__container/popup__container.css);
+@import url(../blocks/popup/__registration/popup__registration.css);
 @import url(../blocks/edit-form-container/edit-form-container.css);
 @import url(../blocks/popup/__close-button/popup__close-button.css);
 @import url(../blocks/edit-form/edit-form.css);
